--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ author_email = haley.patrick@mail.mcgill.ca
 description = A package to create dose-surface maps from radiation therapy treatment data files
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/haleypays/rtdsm
+url = https://github.com/haleypats/rtdsm
 project_urls =
-    Bug Tracker = https://github.com/haleypays/rtdsm/issues
+    Bug Tracker = https://github.com/haleypats/rtdsm/issues
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
